day4/vs.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: ffapp-vs
  
spec:
  hosts:
  - "*"
  gateways:
  - fortune-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: fortuneappsvc
    rewrite:
      uri: /
